Use dynamic layout for CDV attribute

--- a/archive.html
+++ b/archive.html
@@ -375,7 +375,7 @@
                             completed. Each actions will be recorded as a column of CSV data with this sequence of attribute row:</p>
                             <pre><code class="language-plaintext">day,state,commiter_id,action,target_id</code></pre>
                         <h6>Description of attributes</h6>
-                        <table border="1" class="grlog-attr">
+                        <table border="1" class="grlog-attr dynamic-layout">
                             <tr>
                                 <th>Attribute name</th>
                                 <th>Type</th>
