Add remaining roles from Chinese variants

--- a/roles.html
+++ b/roles.html
@@ -352,7 +352,7 @@
                                 <td>狼王 (Werewolf king)</td>
                                 <td>No</td>
                                 <td class="highlight error">Werewolf</td>
-                                <td rowspan="2">1, as well as comply <a href="./#rules">the ratio</a> between Townfolk
+                                <td rowspan="5">1, as well as comply <a href="./#rules">the ratio</a> between Townfolk
                                     and Werewolf parties</td>
                                 <td>
                                     <p>His behaviour is identical with hunter, which take down one of the participant
@@ -371,6 +371,41 @@
                                         ability can be activated. Otherwise, the seduction discarded and repeat the
                                         procedure at night.</p>
                                     <p>Self-reveal is forbidden for this role.</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>石像鬼 (Gargoyle)</td>
+                                <td>No</td>
+                                <td class="highlight error">Werewolf</td>
+                                <td>
+                                    <p>Gargoyle is only eligable to murder Townfolk if no remaining member of Werewolf
+                                        party existed. Normally, his&sol;her ability is the same with Seer.</p>
+                                    <p>Self-reveal is forbidden for this role, but can be murdered by another Werewolf.
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>18</td>
+                                <td>惡靈騎士&sol;恶灵骑士 (Ghost knight)</td>
+                                <td>No</td>
+                                <td class="highlight error">Werewolf</td>
+                                <td>
+                                    <p>Any Townfolk who applied their special ability into Ghost knight will be
+                                        eliminated. This action can only be activated once per entire game.</p>
+                                    <p>Self-reveal is forbidden for this role.</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>19</td>
+                                <td>隱狼&sol;隐狼 (Lone wolf)</td>
+                                <td>No</td>
+                                <td class="highlight error">Werewolf</td>
+                                <td>
+                                    <p>Follow Townfolk routine when other Werewolves exists as well as repoted as
+                                        Townfolk if enquired by Seer. When remaining Werewolves are eliminated, expose
+                                        his&sol;her werewolf identity.</p>
+                                    <p>It can be murdered by another Werewolf.</p>
                                 </td>
                             </tr>
                         </table>
