Should be XZ rather than LZMA

--- a/archive.html
+++ b/archive.html
@@ -221,7 +221,7 @@
                                 <li><code>0x0</code>: Zlib</li>
                                 <li><code>0x1</code>: Zstandard</li>
                                 <li><code>0x2</code>: Brotli</li>
-                                <li><code>0x3</code>: LZMA</li>
+                                <li><code>0x3</code>: XZ</li>
                             </ul> To indicate this algorithm support variable compress level from SDK, union the above
                             valve with <code>0x8</code>. </p>
                         </div>
