--- a/archive.html
+++ b/archive.html
@@ -52,7 +52,7 @@
                     <ul>
                         <li><a href="#iof">Identifier, offsets and flags</a></li>
                         <li><a href="#checksum">Checksums</a></li>
-                        <li>Three <a href="#recdata">recorded data</a> sections (compressed, UTF-8 encoded for
+                        <li>Three <a href="#recdata">recorded data</a> sections (compressed with XZ, UTF-8 encoded for
                             text-based data):<ul>
                                 <li><a href="#recdata-pref">Preferences</a></li>
                                 <li><a href="#recdata-entstat">Entities and Status</a></li>
@@ -149,13 +149,11 @@
                                 <th>Upper</th>
                                 <td rowspan="2">OS identifier</td>
                                 <td>CSV EOL sequence</td>
-                                <td>Compress method</td>
-                                <td rowspan="2" colspan="5">(Reserved)</td>
+                                <td rowspan="2" colspan="6">(Reserved)</td>
                             </tr>
                             <tr>
                                 <th>Lower</th>
                                 <td>CSV delimiter</td>
-                                <td>Compress level</td>
                             </tr>
                         </table>
                         <div id="iof-os">
@@ -204,41 +202,6 @@
                                 <li><code>0x2</code>: Colon (<code>&colon;</code>)</li>
                                 <li><code>0x3</code>: Vertical bar (<code>&verbar;</code>)</li>
                                 <li><code>0x4</code>: Space (<code>&nbsp;</code>)</li>
-                            </ul>
-                            </p>
-                        </div>
-                        <div id="iof-compress-method">
-                            <h6>Compress method</h6>
-                            <p>It is mandated to compress recorded data section when constructing archive file. However,
-                                it also offers various compression algorithm and apply the most optimal solution
-                                depending compress ratio, performance and application. Currently, it supports LZMA,
-                                Brotli, Zstandard and Zlib compression.</p>
-                            <p>These algorithms are determined by upper 4-bit in archive file address <code>0x22</code>.
-                                However, bit 3 is indicated as variable compress level support flag and remain bits are
-                                formed as pattern to determine compression algorithm in the file. Here is the
-                                corresponded value of the applied compression methods:
-                            <ul>
-                                <li><code>0x0</code>: Zlib</li>
-                                <li><code>0x1</code>: Zstandard</li>
-                                <li><code>0x2</code>: Brotli</li>
-                                <li><code>0x3</code>: XZ</li>
-                            </ul> To indicate this algorithm support variable compress level from SDK, union the above
-                            valve with <code>0x8</code>. </p>
-                        </div>
-                        <div id="iof-compress-lv">
-                            <h6>Compress level</h6>
-                            <p>Some compression algorithms provide level to adjust quality of the result as well as
-                                velocity of processing. It located in lower 4-bit at address <code>0x22</code> with the
-                                range of value from <code>0x0</code> (fastest but the worst quality) to <code>0xF</code>
-                                (slowest but best quality). This value is ignored if variable compression level is
-                                unsupported by SDK, which marked as <code>0</code> bit 3 at the same address' upper
-                                4-bit.</p>
-                            <p>Here are few examples of represented value in address <code>0x22</code>:
-                            <ul>
-                                <li><code>0xA6</code> means the archive uses Brotli to compress data with compress level
-                                    at 6.</li>
-                                <li><code>0x35</code> means the archive uses LZMA with no compression level supported
-                                    (eventhough the value assigned as 5).</li>
                             </ul>
                             </p>
                         </div>
@@ -323,9 +286,9 @@
                     <header>
                         <h3>Recorded data</h3>
                     </header>
-                    <p> The final partition is an information of Logginwolf, which compressed according to the <a
-                            href="#iof-compress-method">flag setting</a>. This partition will be subdivided into three
-                        sections of the data, namely preferences, entity and status and game round record.</p>
+                    <p> The final partition is an information of Logginwolf, which compressed using XZ. This partition
+                        will be subdivided into three sections of the data, namely preferences, entity and status and
+                        game round record.</p>
                     <p>In general, for those sections use text-based data format must be encoded as UTF-8.</p>
                     <div id="recdata-pref">
                         <h5>Preferences</h5>
@@ -372,8 +335,9 @@
                     <div id="recdata-grlog">
                         <h5>Game rounds log</h5>
                         <p>It stores all actions commited during the game from initial state until the game is
-                            completed. Each actions will be recorded as a column of CSV data with this sequence of attribute row:</p>
-                            <pre><code class="language-plaintext">day,state,commiter_id,action,target_id</code></pre>
+                            completed. Each actions will be recorded as a column of CSV data with this sequence of
+                            attribute row:</p>
+                        <pre><code class="language-plaintext">day,state,commiter_id,action,target_id</code></pre>
                         <h6>Description of attributes</h6>
                         <table border="1" class="grlog-attr dynamic-layout">
                             <tr>
@@ -389,9 +353,10 @@
                             <tr>
                                 <td><code>state</code></td>
                                 <td>Enumerated string (init, day, night)</td>
-                                <td>State of current day progress ("init" can only be applied when <code>day</code> is <code>0</code> only).</td>
+                                <td>State of current day progress ("init" can only be applied when <code>day</code> is
+                                    <code>0</code> only).</td>
                             </tr>
-                             <tr>
+                            <tr>
                                 <td><code>commiter_id</code></td>
                                 <td>JSON array string</td>
                                 <td>A list of id number of participants that is commiting an action.</td>
@@ -404,10 +369,9 @@
                             <tr>
                                 <td><code>target_id</code></td>
                                 <td>JSON array string</td>
-                                <td>A list of id number of participants that commiter is going to apply their action into them.</td>
+                                <td>A list of id number of participants that commiter is going to apply their action
+                                    into them.</td>
                             </tr>
-                            
-                           
                         </table>
                     </div>
                 </section>
